<resources>
    <string name="app_name">Bookworm</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_library">Library</string>
    <string name="title_shoppingcart">Shopping Cart</string>
    <string name="title_discover">Discover</string>
    <string name="title_placeorder">Place Your Order</string>
    <string name="visitor_login_prompt">Login is required to have a fully access to Bookworm</string>
    <string name="login_validation_failed">Invalid username or password!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="duplicate_username_found">Username already exists</string>
    <string name="email_validation_failed">Invalid E-mail address!</string>
    <string name="username">Username</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="title_review">Reviews</string>
    <string name="InvalidUsername">User does not exist...</string>
    <string name="place_order">Confirm</string>
    <string name="cancel_order">Cancel</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivering_to">Delivering To:</string>
    <string name="items_price">Items</string>
    <string name="delivery_price">Delivery</string>
    <string name="total_b4_tax">Total Before Tax</string>
    <string name="gst">GST/HST</string>
    <string name="pst">PST/RST/QST</string>
    <string name="order_total">Order Total</string>
    <string name="title_best_seller">Best-seller</string>
    <string name="title_best_for_you">Best For You</string>
    <string name="best_seller">Best-seller</string>
    <string name="best_choice">Best choice</string>
    <string name="msg_add_to_cart">successfully added into the shopping cart!</string>
    <string name="btn_back_to_list">go back to book list</string>
    <string name="btn_check_cart">check my shopping cart</string>
    <string name="not_implemented_msg">Sorry, This feature is not implemented yet.</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="user_name_placeholer">User Name placeholer</string>
    <string name="purchase_history">Purchase History</string>
    <string name="temporary_checkout_confirmation">Temporary Checkout Confirmation</string>
    <string name="logout">logout</string>
    <string name="book_not_found">Book not found</string>
    <string name="warning">Warning</string>
    <string name="search_hint">Search for books</string>
    <string name="book_suggestions">Book Suggestions</string>
    <string name="suggestion">Suggestion</string>
    <string name="login_prompt">Please login in order to use this feature</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="add_address">Modify Address</string>
    <string name="title_add_address">Add/Modify Address</string>
    <string name="addr_line_1">Address Line 1:</string>
    <string name="addr_line_2">Address Line 2:</string>
    <string name="city">City:</string>
    <string name="province">Province:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="invalid_address">Invalid address!</string>
    <string-array name="provinces_array">
        <item>--</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>
    <string name="All_Books">All Books</string>
    <string name="title_activity_edit_profie">editProfieActivity</string>
    <string name="title_activity_scrollable_description">scrollable_description</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="no_suggestion_msg">Please login in order to see suggestions.</string>
</resources>
